# Placement-RAG-Agent

./: .env.example  .gitignore  DEPLOYMENT_COMPLETE.md  FIXES_APPLIED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  README.md  README_FIXES.md  REFACTORING_SUMMARY.md  index.html  interview-rag-agent.jsx  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  setup.cfg  start_localhost.bat  test_amazon_query.py  test_api.py  test_dashboard_data.py  test_fixes.py  vite.config.js
backend/: ingest.py  requirements.txt
backend/app/: gemini_client.py  main.py  models.py  retriever.py  service.py  vector_store.py
backend/config/: __init__.py  config.yaml  settings.py
backend/core/: __init__.py
backend/evaluation/: __init__.py  metrics.py
backend/ingestion/: __init__.py  build_index.py  chunk_enhancer.py  document_loader.py  drive_sync.py  metadata_extractor.py  pipeline.py
backend/observability/: __init__.py  dashboard.py  pipeline_tracker.py  tracing.py
data/: .ingestion_state.json  vector_index.json
documents/: knowledge_base.md
placement_rag_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
security/: __init__.py  config.py  constants.py  context_sanitizer.py  grounding.py  hallucination_guard.py  input_validator.py  logger.py  output_sanitizer.py  output_validator.py  prompt_injection.py  rate_limiter.py  retrieval_guard.py  utils.py
src/: App.css  App.jsx  ConversationSidebar.jsx  DeveloperDashboard.jsx  FeatureToggles.jsx  PipelineProgress.jsx  conversationManager.js  index.css
tests/: test_ingest_cli.py
(+47 files in other folders)
